force-app/main/default/objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <description>Represents invoice-level order data imported from the SAP system, used for billing and reconciliation.</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>