force-app/main/default/objects/SalesOrder__c/fields/invoiceDate__c.field-meta.xml
<CustomField>
    <fullName>invoiceDate__c</fullName>
    <description>Displays the date when the invoice is generated</description>
    <inlineHelpText>Date when the invoice is generated</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>