force-app/main/default/objects/SalesOrder__c/fields/opportunityId__c.field-meta.xml
<CustomField>
    <fullName>opportunityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links each Sales Order to its corresponding Opportunity for better sales tracking and reporting.</description>
    <inlineHelpText>Corresponding Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>SalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>