force-app/main/default/objects/SalesOrder__c/fields/orderDate__c.field-meta.xml
<CustomField>
    <fullName>orderDate__c</fullName>
    <description>Displays the date when the order is generated.</description>
    <inlineHelpText>Date when the order is generated.</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>