force-app/main/default/objects/SalesOrder__c/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <description>Displays the external invoice number.</description>
    <externalId>true</externalId>
    <inlineHelpText>External invoice number.</inlineHelpText>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>