force-app/main/default/objects/SalesOrder__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Displays the status of the order.</description>
    <inlineHelpText>Status of the order.</inlineHelpText>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>