force-app/main/default/objects/SalesOrder__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>Displays the type of the order.</description>
    <inlineHelpText>Type of the order.</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>